--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ select {
   -moz-appearance: none;
   -webkit-appearance: none;
   appearance: none;
-  background-image: url('../images/arrow.jpg');
+  background-image: url('images/arrow.jpg');
   background-repeat: no-repeat;
   background-position: calc(100% - 10px) center;
 }
