--- a/style.css
+++ b/style.css
@@ -7,12 +7,15 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   background-color: black;
 }
-@media screen and (min-width: 800px) {
+/*  @media screen and (min-width: 800px) {
   .container {
     margin: 1em 2em;
   }
-} 
-
+}   */
+.conteiner{
+  max-width: 1000px;
+  margin: auto;
+}
 .title {
   background-color: #48c5ce;
   text-align: center;
@@ -102,15 +105,6 @@ footer {
   background-color: #48c5ce;
   color: white;
   text-align: center;
-
   padding: 10px;
-}
-a {
-  color: white;
-  font-weight: bolder;
-  text-decoration: none;
-}
-a:hover {
-  text-decoration: underline;
-  color: white;
+  font-weight: bold;
 }
