--- a/style.css
+++ b/style.css
@@ -71,9 +71,9 @@ select {
   -moz-appearance: none;
   -webkit-appearance: none;
   appearance: none;
-  background-image: url('images/arrow.jpg');
+  background-image: url(./images/arrow.jpg);
   background-repeat: no-repeat;
-  background-position: calc(100% - 10px) center;
+  background-position: calc(100% - 10px) center; 
 }
 
 .picture {
